Fix spacing bug in pagination

--- a/_src/_includes/css/style.css
+++ b/_src/_includes/css/style.css
@@ -790,7 +790,7 @@ label + .inline-field-control {
 
 /* Post Navigation */
 .posts-pagination {
-  --stack-space: var(--s6);
+  margin-top: var(--s6);
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
